--- a/es-systems/complex-protection.html
+++ b/es-systems/complex-protection.html
@@ -18,16 +18,16 @@
 								<img src="images/dest/logo.svg" alt="logo">
 							</a>
 							<nav class="header__menu menu">
-								<a href="#" class="menu__item">О компании</a>
-								<a href="#" class="menu__item">Продукция</a>
-								<a href="#" class="menu__item">Наши услуги</a>
-								<a href="#" class="menu__item">Контакты</a>
+								<a href="#" class="menu__item">About Us</a>
+								<a href="#" class="menu__item">Products</a>
+								<a href="#" class="menu__item">Our services</a>
+								<a href="#" class="menu__item">Contacts</a>
 							</nav>
 						</div>
 						<div class="header__right">
 							<div class="header__feedback feedback">
-								<div class="feedback__callback">Заказать звонок</div>
-								<a href="#" class="feedback__email">info@cps63.ru</a>
+								<div class="feedback__callback">Request a call</div>
+								<a href="#" class="feedback__email">sales@espipesystem.de</a>
 							</div>
 						</div>
 					</div>
@@ -38,9 +38,9 @@
 				<div class="wrapper">
 					<div class="second-banner__content">
 						<div class="second-banner__content-block">
-							<div class="second-banner__title">Комплексная система защиты насосно-компрессорных труб</div>
-							<div class="second-banner__description">ES System - система модификации НКТ и муфт НКТ, которая служит для кратного повышения ресурса работы колонны в скважине и антикоррозионной защиты, призванной сократить количество преждевременных отказов элементов колонны</div>
-							<div class="second-banner__file">Технические условия применения</div>
+							<div class="second-banner__title">Integrated protection system for pump and compressor pipes</div>
+							<div class="second-banner__description">ES System is a system for modifying tubing and tubing couplings, which serves to multiply the service life of the column in the well and corrosion protection, designed to reduce the number of premature failures of the column elements</div>
+							<div class="second-banner__file">Technical conditions of application</div>
 						</div>
 						<div class="second-banner__content-image">
 							<img src="images/dest/8.png" alt="">
@@ -53,48 +53,48 @@
 				<section class="numbers">
 					<div class="numbers__list">
 						<div class="numbers__item">
-							<div class="numbers__item-title">В 5 раз</div>
-							<div class="numbers__item-text">Сокращение объемов закупок «черных» насосно-компрессорных труб для осложненного фонда скважин</div>
+							<div class="numbers__item-title">5 times</div>
+							<div class="numbers__item-text">Reduction in the volume of purchases of "black" tubing for complicated well stock</div>
 						</div>
 						<div class="numbers__item">
 							<div class="numbers__item-title">+270°C</div>
-							<div class="numbers__item-text">Термостойкость лейнеров из нержавеющей стали, что значительно превышает стойкость любого ЛКМ</div>
+							<div class="numbers__item-text">The heat resistance of stainless steel liners, which significantly exceeds the resistance of any paintwork</div>
 						</div>
 						<div class="numbers__item">
-							<div class="numbers__item-title">В 5 раз</div>
-							<div class="numbers__item-text">Выше абразивная стойкость лейнеров ES-System, а сопоставимая с ЛКМ шероховатость поверхности препятствует образованию на внутренней поверхности различных отложений (АСПО)</div>
+							<div class="numbers__item-title">5 times</div>
+							<div class="numbers__item-text">The abrasive resistance of ES-System liners is higher, and the surface roughness comparable to the paintwork and prevents the formation of various deposits on the inner surface (ARPD)</div>
 						</div>
 						<div class="numbers__item">
-							<div class="numbers__item-title">В 3 раза</div>
-							<div class="numbers__item-text">Выше эксплуатационный ресурс резьбы за счет металлизационного покрытия + избавление от транспортировочных смазок облегчает подготовку труб к спуску</div>
+							<div class="numbers__item-title">3 times</div>
+							<div class="numbers__item-text">Higher thread service life due to metallization coating + absence of transportation lubricants facilitates the preparation of pipes for descent</div>
 						</div>
 					</div>
 				</section>
 
 			
 				<div class="block">
-					<div class="title">ES-System защиты НКТ и муфт</div>
+					<div class="title">ES-System tubing and couplings protection system</div>
 					<div class="block__list">
 						<div class="block__item">
 							<img src="images/dest/9.png" alt="" style="padding-bottom: 45px;">
 							<ol>
-								<li>Тонкостенная труба из нержавеющей стали</li>
-								<li>Тонкостенная труба НКТ из углеродистой стали</li>
-								<li>Стример</li>
-								<li>Муфта НКТ</li>
+								<li>Thin-walled stainless steel pipe</li>
+								<li>Thin-walled tubing made of carbon steel</li>
+								<li>Streamer</li>
+								<li>Tubing coupling</li>
 							</ol>
 						</div>
 						<div class="block__item">
-							<div class="sub-title">Модифицируемые изделия</div>
+							<div class="sub-title">Modified items</div>
 							<ol style="margin-bottom: 50px;">
-								<li>Тело НКТ: установка лейнера</li>
-								<li>Резьба НКТ: антикоррозионное покрытие, сухая смазка</li>
-								<li>Резьба муфты: упрочнение, антикоррозионная защита</li>
+								<li>TUBING body: installation of the liner</li>
+								<li>TUBING thread: anti-corrosion coating, dry lubrication</li>
+								<li>Coupling thread: hardening, anti-corrosion protection</li>
 							</ol>
-							<div class="sub-title">Дополнительные изделия</div>
+							<div class="sub-title">Additional items</div>
 							<ol>
-								<li>Уплотнитель из фторполимеров (химическая инертность ко всем агрессивным веществам, термостойкость до +270 С, износостойкость)</li>
-								<li>Серийно выпускаемый стример.</li>
+								<li>Sealer made of fluoropolymers (chemical inertness to all aggressive substances, heat resistance up to +270 C, wear resistance)</li>
+								<li>Mass – produced streamer</li>
 							</ol>
 						</div>
 					</div>
@@ -106,25 +106,25 @@
 					<div class="characteristics__inner">
 						<div class="characteristics__block">
 							<div class="characteristics__list">
-								<div class="title">Основные характеристики</div>
+								<div class="title">Main characteristic</div>
 								<div class="characteristics__item characteristics__item_active">
-									<div class="characteristics__title">Сортамент</div>
-									<div class="characteristics__text">Гладкие трубы Ø60- 114мм любой группы прочности с треугольной и трапецеидальной резьбами</div>
+									<div class="characteristics__title">Assortment</div>
+									<div class="characteristics__text">Smooth pipes Ø60- 114mm of any strength group with triangular and trapezoidal threads</div>
 								</div>
 								<div class="characteristics__item">
-									<div class="characteristics__title">Лейнеры НКТ</div>
+									<div class="characteristics__title">TUBING liners</div>
 									<div class="characteristics__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, perspiciatis.</div>
 								</div>
 								<div class="characteristics__item">
-									<div class="characteristics__title">Комбинированное металлизационное покрытие</div>
+									<div class="characteristics__title">Combined metallization coating</div>
 									<div class="characteristics__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, perspiciatis.</div>
 								</div>
 								<div class="characteristics__item">
-									<div class="characteristics__title">Уплотнитель из фторполимера</div>
+									<div class="characteristics__title">Fluoropolymer sealer</div>
 									<div class="characteristics__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, perspiciatis.</div>
 								</div>
 								<div class="characteristics__item">
-									<div class="characteristics__title">Ионное азотирование</div>
+									<div class="characteristics__title">Surface hardening of couplings</div>
 									<div class="characteristics__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, perspiciatis.</div>
 								</div>
 							</div>
@@ -138,27 +138,27 @@
 
 			<div class="wrapper">
 				<section class="advantages">
-					<div class="title">Комплексное решение для повышения ресурса НКТ</div>
+					<div class="title">A comprehensive solution to increase the service life of the tubing</div>
 					<div class="advantages__list">
 						<div class="advantages__item">
 							<div class="advantages__item-number">1</div>
-							<div class="advantages__item-title">Наша компания</div>
-							<div class="advantages__item-text">Современное предприятие с собственными производственными площадями и складскими комплексами, оснащенное новейшим высококачественным оборудованием и командой высококлассных специалистов</div>
+							<div class="advantages__item-title">Reduction of accidents</div>
+							<div class="advantages__item-text">A comprehensive increase in the strength characteristics of tubing, rather than replacing individual elements, significantly reduces accidents and, as a result, economic and environmental damage</div>
 						</div>
 						<div class="advantages__item">
 							<div class="advantages__item-number">2</div>
-							<div class="advantages__item-title">Специализация</div>
-							<div class="advantages__item-text">Производство устройств защиты внутренней части сварного стыка трубопроводов (втулки), а также производство модифицированных НКТ (ES Sytem)</div>
+							<div class="advantages__item-title">Anti-corrosion protection</div>
+							<div class="advantages__item-text">Hardening of the surface of the couplings and anti-corrosion treatment of the interstitial space significantly reduces the development of corrosion processes</div>
 						</div>
 						<div class="advantages__item">
 							<div class="advantages__item-number">3</div>
-							<div class="advantages__item-title">Производство</div>
-							<div class="advantages__item-text">Мы располагаем мощным производственным комплексом, который включает в себя: участок входного / выходного контроля, линию покраски, участок механической обработки и сварки, участок монтажных работ, система перемещения труб между участками по очистке, напылению, наплавки и гидрораздачи, склад готовой продукции</div>
+							<div class="advantages__item-title">Cost optimization</div>
+							<div class="advantages__item-text">Increasing the service life of the column, reducing capital investments for repair and exploitation, as well as reducing the downtime of the well</div>
 						</div>
 						<div class="advantages__item">
 							<div class="advantages__item-number">4</div>
-							<div class="advantages__item-title">Команда</div>
-							<div class="advantages__item-text">Основа нашей компании — высококлассный, квалифицированный коллектив профессионалов, обладающих большим опытом и высокой компетенции в области антикоррозионной защиты различных элементов трубопроводов и НКТ</div>
+							<div class="advantages__item-title">Versatility</div>
+							<div class="advantages__item-text">The possibility of using both a sealer of a unique design made of fluoropolymer and any commercially available streamer to protect the inter-clip space of the couplings</div>
 						</div>
 					</div>
 				</section>
@@ -169,35 +169,35 @@
 			<div class="wrapper">
 				<section class="contacts">
 					<div class="contacts__block">
-						<div class="contacts__title title">Контакты</div>
+						<div class="contacts__title title">Contact</div>
 						<a href="#" class="contacts__phone">+7 (846) 212-97-57</a>
-						<a href="#" class="contacts__email">info@cps63.ru</a>
-						<a href="#" class="contacts__requisites">реквизиты</a>
-						<div class="contacts__adress">443052 Россия, Самара, ул. Земеца 4, корп. 94Б</div>
+						<a href="#" class="contacts__email">sales@espipesystem.de</a>
+						<!-- <a href="#" class="contacts__requisites">реквизиты</a> -->
+						<div class="contacts__adress">443052 Russia, Samara, st. Zemetsa 4, office 1</div>
 						<div class="contacts__work-time">
-							Работаем с 8:00 до 17:00<br>
-							(Выходные: суббота, воскресенье)
+							Working time from 8:00 till 17:00<br>
+							(Weekend: Saturday, Sunday)
 						</div>
 					</div>
 					<div class="contacts__block">
 						<form class="contacts__form form" action="/" method="POST">
 							<div class="form__inner">
-								<div class="form__title">Задать вопрос</div>
-								<div class="form__description">Подробно расскажем о наших услугах, видах работ и типовых проектах, рассчитаем стоимость и подготовим индивидуальное предложение!</div>
+								<div class="form__title">Ask a question</div>
+								<div class="form__description">We will tell you in detail about our services, types of work and standard projects, calculate the cost and prepare an individual offer!</div>
 								<div class="form__fields">
 									<div class="form__block">
 										<label for="name" class="form__label">
-											<span class="form__label-text">Как к вам обращаться? </span>
+											<span class="form__label-text">How can we call you?</span>
 											<input type="text" name="user_name" value="" id="name" class="form__input">
 										</label>
 										<label for="phone" class="form__label">
-											<span class="form__label-text">Телефон *</span>
+											<span class="form__label-text">Phone *</span>
 											<input type="text" name="user_phone" data-mask="phone" value="" id="phone" placeholder="+7 ___ ___ __ __" class="form__input">
 										</label>
 									</div>
 									<div class="form__block">
 										<label for="comment" class="form__label form__label_w-100">
-											<span class="form__label-text">Комментарий </span>
+											<span class="form__label-text">Comment</span>
 											<textarea name="MESSAGE" id="comment" class="form__textarea"></textarea>
 										</label>
 									</div>
@@ -206,15 +206,15 @@
 										<label for="policy" class="form__label form__label_w-100 form__label_checkbox">
 											<input type="checkbox" name="policy" required id="policy" class="form__checkbox">
 											<span class="form__label-checkbox">
-												 Я даю свое согласие на обработку моих персональных данных,
+												I give my consent to the processing of my personal data,
 												<br>
-												 в соответствии с 
-												<a href='/policy/' target='_blank'>политикой конфиденциальности</a>
+												in accordance with the
+												<a href='/policy/' target='_blank'>privacy policy</a>
 											</span>
 										</label>
 									</div>
 									<div class="form__block form__block_m-0">
-										<input class="form__button btn btn_blue" type="submit" name="submit" value="Отправить">
+										<input class="form__button btn btn_blue" type="submit" name="submit" value="Send">
 									</div>
 								</div>
 							</div>
@@ -229,23 +229,23 @@
 						<div class="footer__left">
 							<a href="#" class="footer__logo logo">
 								<img src="images/dest/second-logo.svg" alt="">
-								<div class="logo__copy">© 2022 ООО «Интеко»</div>
+								<div class="logo__copy">© 2022 ООО «Inteco»</div>
 							</a>
 							<div class="footer__menu menu-second">
-								<a href="#" class="menu-second__item">О компании</a>
-								<a href="#" class="menu-second__item">Продукция</a>
-								<a href="#" class="menu-second__item">Наши услуги</a>
-								<a href="#" class="menu-second__item">Контакты</a>
+								<a href="#" class="menu-second__item">About Us </a>
+								<a href="#" class="menu-second__item">Products</a>
+								<a href="#" class="menu-second__item">Our services</a>
+								<a href="#" class="menu-second__item">Contacts</a>
 							</div>
 						</div>
 						<div class="footer__right">
 							<div class="footer__contacts">
-								<a href="#" class="footer__contacts-item">Самара, ул. Земеца 4, корп. 94Б</a>
+								<a href="#" class="footer__contacts-item">Samara, st. Zemetsa 4, office 1</a>
 								<a href="#" class="footer__contacts-item">+7 (846) 212-97-57</a>
 							</div>
 							<div class="footer__feedback feedback">
-								<div class="feedback__callback">Заказать звонок</div>
-								<a href="#" class="feedback__email">info@<span>cps</span>63.ru</a>
+								<div class="feedback__callback">Request a call</div>
+								<a href="#" class="feedback__email">sales@<span>espipesystem</span>.de</a>
 							</div>
 						</div>
 					</div>
