--- a/es-systems/mastic-sleeve.html
+++ b/es-systems/mastic-sleeve.html
@@ -18,15 +18,16 @@
 								<img src="images/dest/logo.svg" alt="logo">
 							</a>
 							<nav class="header__menu menu">
-								<a href="#" class="menu__item">О компании</a>
-								<a href="#" class="menu__item">Продукция</a>
-								<a href="#" class="menu__item">Контакты</a>
+								<a href="#" class="menu__item">About Us</a>
+								<a href="#" class="menu__item">Products</a>
+								<a href="#" class="menu__item">Our services</a>
+								<a href="#" class="menu__item">Contacts</a>
 							</nav>
 						</div>
 						<div class="header__right">
 							<div class="header__feedback feedback">
-								<div class="feedback__callback">Заказать звонок</div>
-								<a href="#" class="feedback__email">info@cps63.ru</a>
+								<div class="feedback__callback">Request a call</div>
+								<a href="#" class="feedback__email">sales@espipesystem.de</a>
 							</div>
 						</div>
 					</div>
@@ -37,9 +38,9 @@
 				<div class="wrapper">
 					<div class="second-banner__content">
 						<div class="second-banner__content-block">
-							<div class="second-banner__title">Мастичная втулка внутренней защиты сварного шва</div>
-							<div class="second-banner__description">Втулки защиты сварного шва CPSМ предназначены для защиты сварного шва трубопровода от коррозии, применяются на трубопроводах с внутренним антикоррозионным покрытием для транспортировки нефтепродуктов, стабильного конденсата, не осушенного попутного нефтяного газа, сточных промысловых вод с содержанием сероводорода</div>
-							<div class="second-banner__file">Инструкция по монтажу</div>
+							<div class="second-banner__title">Mastic Sleeve for the internal Weld Protection</div>
+							<div class="second-banner__description">CPSM weld protection sleeves are designed to protect the weld seam of the pipeline against corrosion, used on pipelines with internal corrosion protection coating for the transportation of petroleum products, stable condensate, not drained associated petroleum gas, Waste Water with Hydrogen Sulfide Content</div>
+							<div class="second-banner__file">Installation instructions</div>
 						</div>
 						<div class="second-banner__content-image">
 							<img src="images/dest/1.png" alt="">
@@ -51,17 +52,17 @@
 			
 			<div class="wrapper">
 				<section class="product">
-					<div class="title">Описание</div>
+					<div class="title">Description</div>
 					<div class="product__inner">
 						<div class="product__block">
-							<div class="product__text">Втулка устанавливается внутри трубы в зоне сварного шва. Резиновые манжеты при установке втулки в трубу формируют герметичный валик из предварительно нанесенной специальной двухкомпонентной мастики. В результате образуется кольцевой сварной шов, полностью защищенный от контакта с агрессивной средой.</div>
+							<div class="product__text">The sleeve is installed inside the pipe in the area of the weld. When installing the sleeve into the pipe, rubber cuffs form a sealed roller from a pre-applied special two-component mastic. The result is an annular weld, completely protected from contact with aggressive environment.</div>
 						</div>
 						<div class="product__block">
 							<div class="product__advantages">
-								<div class="product__advantages-item">Не требует калибровки концов труб</div>
-								<div class="product__advantages-item">Незначительное cужение проходного сечения</div>
-								<div class="product__advantages-item">Малый вес</div>
-								<div class="product__advantages-item">Хорошая продольная и поперечная устойчивость</div>
+								<div class="product__advantages-item">Does not require calibration of pipe ends</div>
+								<div class="product__advantages-item">Slight narrowing of the flow area</div>
+								<div class="product__advantages-item">Light weight</div>
+								<div class="product__advantages-item">Good longitudinal and lateral stability</div>
 							</div>
 						</div>
 						<div class="product__block">
@@ -100,18 +101,18 @@
 						</div>
 						<div class="product__block">
 							<div class="product__description">
-								Марка CPSM<br><br>
+								Brand CPSM<br><br>
 								<ul>
-									<li>Сортамент выпускаемой продукции: ⌀ 90 — 530;</li>
-									<li>Втулки большего размера могут быть изготовлены по спец. заказу;</li>
-									<li>Максимальная температура перекачиваемой среды: +90 °C;</li>
-									<li>Минимальная длина прямого участка под установку втулки не менее 100 мм, зона непрокраса концов труб 50мм</li>
+									<li>Product range: ⌀ 90 — 530;</li>
+									<li>Larger sleeves can be made to special order;</li>
+									<li>Maximum temperature of the pumped medium: +90 °C;</li>
+									<li>The minimum length of the straight section for the installation of the sleeve is at least 100 mm, the non-paint zone of the pipe ends is 50 mm</li>
 								</ul>
-								Срок хранения: 5 лет<br>
-								Срок эксплуатации: 20 лет
+								Shelf life: 5 years<br>
+								Service life: 20 years
 								<div class="product__btns">
-									<a href="#questionnaire" data-fancybox="" data-width="651" class="product__btn btn btn_blue-fill">Опросный лист</a>
-									<a href="#callOrder" data-fancybox="" data-width="651" class="product__btn btn btn_blue">Задать вопрос</a>
+									<a href="#questionnaire" data-fancybox="" data-width="651" class="product__btn btn btn_blue-fill">Questionare</a>
+									<a href="#callOrder" data-fancybox="" data-width="651" class="product__btn btn btn_blue">Ask a Question</a>
 								</div>	
 							</div>
 						</div>
@@ -124,35 +125,35 @@
 			<div class="wrapper">
 				<section class="contacts">
 					<div class="contacts__block">
-						<div class="contacts__title title">Контакты</div>
+						<div class="contacts__title title">Contact</div>
 						<a href="#" class="contacts__phone">+7 (846) 212-97-57</a>
-						<a href="#" class="contacts__email">info@cps63.ru</a>
-						<a href="#" class="contacts__requisites">реквизиты</a>
-						<div class="contacts__adress">443052 Россия, Самара, ул. Земеца 4, корп. 94Б</div>
+						<a href="#" class="contacts__email">sales@espipesystem.de</a>
+						<!-- <a href="#" class="contacts__requisites">реквизиты</a> -->
+						<div class="contacts__adress">443052 Russia, Samara, st. Zemetsa 4, office 1</div>
 						<div class="contacts__work-time">
-							Работаем с 8:00 до 17:00<br>
-							(Выходные: суббота, воскресенье)
+							Working time from 8:00 till 17:00<br>
+							(Weekend: Saturday, Sunday)
 						</div>
 					</div>
 					<div class="contacts__block">
 						<form class="contacts__form form" action="/" method="POST">
 							<div class="form__inner">
-								<div class="form__title">Задать вопрос</div>
-								<div class="form__description">Подробно расскажем о наших услугах, видах работ и типовых проектах, рассчитаем стоимость и подготовим индивидуальное предложение!</div>
+								<div class="form__title">Ask a question</div>
+								<div class="form__description">We will tell you in detail about our services, types of work and standard projects, calculate the cost and prepare an individual offer!</div>
 								<div class="form__fields">
 									<div class="form__block">
 										<label for="name" class="form__label">
-											<span class="form__label-text">Как к вам обращаться? </span>
+											<span class="form__label-text">How can we call you?</span>
 											<input type="text" name="user_name" value="" id="name" class="form__input">
 										</label>
 										<label for="phone" class="form__label">
-											<span class="form__label-text">Телефон *</span>
+											<span class="form__label-text">Phone *</span>
 											<input type="text" name="user_phone" data-mask="phone" value="" id="phone" placeholder="+7 ___ ___ __ __" class="form__input">
 										</label>
 									</div>
 									<div class="form__block">
 										<label for="comment" class="form__label form__label_w-100">
-											<span class="form__label-text">Комментарий </span>
+											<span class="form__label-text">Comment</span>
 											<textarea name="MESSAGE" id="comment" class="form__textarea"></textarea>
 										</label>
 									</div>
@@ -161,15 +162,15 @@
 										<label for="policy" class="form__label form__label_w-100 form__label_checkbox">
 											<input type="checkbox" name="policy" required id="policy" class="form__checkbox">
 											<span class="form__label-checkbox">
-												 Я даю свое согласие на обработку моих персональных данных,
+												I give my consent to the processing of my personal data,
 												<br>
-												 в соответствии с 
-												<a href='/policy/' target='_blank'>политикой конфиденциальности</a>
+												in accordance with the
+												<a href='/policy/' target='_blank'>privacy policy</a>
 											</span>
 										</label>
 									</div>
 									<div class="form__block form__block_m-0">
-										<input class="form__button btn btn_blue" type="submit" name="submit" value="Отправить">
+										<input class="form__button btn btn_blue" type="submit" name="submit" value="Send">
 									</div>
 								</div>
 							</div>
@@ -184,23 +185,23 @@
 						<div class="footer__left">
 							<a href="#" class="footer__logo logo">
 								<img src="images/dest/second-logo.svg" alt="">
-								<div class="logo__copy">© 2022 ООО «Интеко»</div>
+								<div class="logo__copy">© 2022 ООО «Inteco»</div>
 							</a>
 							<div class="footer__menu menu-second">
-								<a href="#" class="menu-second__item">О компании</a>
-								<a href="#" class="menu-second__item">Продукция</a>
-								<a href="#" class="menu-second__item">Наши услуги</a>
-								<a href="#" class="menu-second__item">Контакты</a>
+								<a href="#" class="menu-second__item">About Us </a>
+								<a href="#" class="menu-second__item">Products</a>
+								<a href="#" class="menu-second__item">Our services</a>
+								<a href="#" class="menu-second__item">Contacts</a>
 							</div>
 						</div>
 						<div class="footer__right">
 							<div class="footer__contacts">
-								<a href="#" class="footer__contacts-item">Самара, ул. Земеца 4, корп. 94Б</a>
+								<a href="#" class="footer__contacts-item">Samara, st. Zemetsa 4, office 1</a>
 								<a href="#" class="footer__contacts-item">+7 (846) 212-97-57</a>
 							</div>
 							<div class="footer__feedback feedback">
-								<div class="feedback__callback">Заказать звонок</div>
-								<a href="#" class="feedback__email">info@<span>cps</span>63.ru</a>
+								<div class="feedback__callback">Request a call</div>
+								<a href="#" class="feedback__email">sales@<span>espipesystem</span>.de</a>
 							</div>
 						</div>
 					</div>
