--- a/es-systems/sleeves.html
+++ b/es-systems/sleeves.html
@@ -17,15 +17,16 @@
 								<img src="images/dest/logo.svg" alt="logo">
 							</a>
 							<nav class="header__menu menu">
-								<a href="#" class="menu__item">О компании</a>
-								<a href="#" class="menu__item">Продукция</a>
-								<a href="#" class="menu__item">Контакты</a>
+								<a href="#" class="menu__item">About Us</a>
+								<a href="#" class="menu__item">Products</a>
+								<a href="#" class="menu__item">Our services</a>
+								<a href="#" class="menu__item">Contacts</a>
 							</nav>
 						</div>
 						<div class="header__right">
 							<div class="header__feedback feedback">
-								<div class="feedback__callback">Заказать звонок</div>
-								<a href="#" class="feedback__email">info@cps63.ru</a>
+								<div class="feedback__callback">Request a call</div>
+								<a href="#" class="feedback__email">sales@espipesystem.de</a>
 							</div>
 						</div>
 					</div>
@@ -36,8 +37,8 @@
 				<div class="wrapper">
 					<div class="second-banner__content">
 						<div class="second-banner__content-block">
-							<div class="second-banner__title">Защита внутренней части сварного стыка трубопроводов</div>
-							<div class="second-banner__description">Устройство защиты внутренней части сварного стыка марки CPS является новейшей разработкой в области защиты внутренней части сварных швов и имеет ряд существенных преимуществ перед отечественными и зарубежными аналогами</div>
+							<div class="second-banner__title">Internal protection of the weld joint of the pipeline</div>
+							<div class="second-banner__description">CPS sleeves are the latest development in the field of protecting the internal part of welds and have a number of significant advantages over analogues.</div>
 						</div>
 						<div class="second-banner__content-image">
 							<img src="images/dest/1.png" alt="">
@@ -51,27 +52,30 @@
 					<div class="achievements__list">
 						<div class="achievements__item">
 							<div class="achievements__item-title">
-								<span id="achievement1" class="achievements__item-number">3 000</span>  м²			</div>
-							<div class="achievements__item-text">общая площадь производственных помещений</div>
+								<span id="achievement1" class="achievements__item-number">3 000</span>  m²			
+							</div>
+							<div class="achievements__item-text">total area of production premises</div>
 						</div>
 						<div class="achievements__item">
 							<div class="achievements__item-title">
-								&gt;<span id="achievement2" class="achievements__item-number">100 000</span> км			</div>
-							<div class="achievements__item-text">трубопроводов построено с применением втулок CPS</div>
+								<span id="achievement2" class="achievements__item-number">100 000</span> km		
+							</div>
+							<div class="achievements__item-text">pipelines built using CPS sleeves</div>
 						</div>
 						<div class="achievements__item">
 							<div class="achievements__item-title">
-								&gt;<span id="achievement3" class="achievements__item-number">30 000</span> шт.			</div>
-							<div class="achievements__item-text">мощности компании позволяют выпускать втулок в месяц</div>
+								<span id="achievement3" class="achievements__item-number">30 000</span> pc.			
+							</div>
+							<div class="achievements__item-text">the company's capacities allow the production of sleeves per month</div>
 						</div>
 					</div>
 				</section>
 				
 				<section class="about">
-						<div class="title">Виды втулок внутренней защиты сварного шва</div>
+						<div class="title">Types of internal protection sleeves of the weld</div>
 						<div class="about__description">
-							<p>Втулка устанавливается внутри трубы в зоне сварного шва. Резиновые манжеты при установке втулки в трубу формируют герметичный валик из предварительно нанесенной специальной двухкомпонентной мастики. В результате образуется кольцевой сварной шов, полностью защищенный от контакта с агрессивной средой.</p>
-							<p>Применяются в системах транспортирующих нефтегазовые смеси, не осушенный нефтяной газ и нефтепродукты, питьевую, пластовую и другую техническую воду, в том числе с содержанием сероводорода, двуокиси углерода и других коррозионно- активных компонентов на нефтяных месторождениях.</p>
+							<p>The sleeve is installed inside the pipe in the area of the weld. When installing the sleeve into the pipe, rubber cuffs form a sealed roller from a pre-applied special two-component mastic. The result is an annular weld, completely protected from contact with aggressive environment.</p>
+							<p>Used in systems transporting oil and gas mixtures, non-drained petroleum gas and oil products, drinking, reservoir and other technical water, including hydrogen sulfide, carbon dioxide and other corrosion-active components in oil fields</p>
 						</div>
 				</section>
 
@@ -79,8 +83,8 @@
 					<div class="catalog__inner">
 						<div class="catalog__item-big">
 							<div class="catalog__item-big-block">
-								<div class="catalog__item-big-title">Мастичная втулка внутренней защиты сварного шва</div>
-								<div class="catalog__item-big-text">Втулка марки CPSМ является новейшей разработкой в области защиты внутренней части сварных швов и изготавливается из углеродистой стали с антикоррозионным покрытием</div>
+								<div class="catalog__item-big-title">Mastic Sleeve for the internal Weld Protection</div>
+								<div class="catalog__item-big-text">CPSM sleeve is the latest development in the field of protection of the inner part of welds and is made of carbon steel with anti-corrosion coating</div>
 							</div>
 							<div class="catalog__item-big-image">
 								<img src="images/dest/2.png" alt="">
@@ -88,8 +92,8 @@
 						</div>
 						<div class="catalog__item">
 							<div class="catalog__item-block">
-								<div class="catalog__item-title">Биметаллическая втулка защиты сварного шва</div>
-								<div class="catalog__item-text">Втулка марки CPSС является новейшей разработкой в области защиты внутренней части сварных швов и изготавливается из нержавеющей стали</div>
+								<div class="catalog__item-title">Bimetal sleeve for the internal weld protection</div>
+								<div class="catalog__item-text">CPSС sleeve is the latest development in the protection of the inner part of welds and is made of stainless steel</div>
 							</div>
 						</div>
 					</div>
@@ -101,35 +105,35 @@
 			<div class="wrapper">
 				<section class="contacts">
 					<div class="contacts__block">
-						<div class="contacts__title title">Контакты</div>
+						<div class="contacts__title title">Contact</div>
 						<a href="#" class="contacts__phone">+7 (846) 212-97-57</a>
-						<a href="#" class="contacts__email">info@cps63.ru</a>
-						<a href="#" class="contacts__requisites">реквизиты</a>
-						<div class="contacts__adress">443052 Россия, Самара, ул. Земеца 4, корп. 94Б</div>
+						<a href="#" class="contacts__email">sales@espipesystem.de</a>
+						<!-- <a href="#" class="contacts__requisites">реквизиты</a> -->
+						<div class="contacts__adress">443052 Russia, Samara, st. Zemetsa 4, office 1</div>
 						<div class="contacts__work-time">
-							Работаем с 8:00 до 17:00<br>
-							(Выходные: суббота, воскресенье)
+							Working time from 8:00 till 17:00<br>
+							(Weekend: Saturday, Sunday)
 						</div>
 					</div>
 					<div class="contacts__block">
 						<form class="contacts__form form" action="/" method="POST">
 							<div class="form__inner">
-								<div class="form__title">Задать вопрос</div>
-								<div class="form__description">Подробно расскажем о наших услугах, видах работ и типовых проектах, рассчитаем стоимость и подготовим индивидуальное предложение!</div>
+								<div class="form__title">Ask a question</div>
+								<div class="form__description">We will tell you in detail about our services, types of work and standard projects, calculate the cost and prepare an individual offer!</div>
 								<div class="form__fields">
 									<div class="form__block">
 										<label for="name" class="form__label">
-											<span class="form__label-text">Как к вам обращаться? </span>
+											<span class="form__label-text">How can we call you?</span>
 											<input type="text" name="user_name" value="" id="name" class="form__input">
 										</label>
 										<label for="phone" class="form__label">
-											<span class="form__label-text">Телефон *</span>
+											<span class="form__label-text">Phone *</span>
 											<input type="text" name="user_phone" data-mask="phone" value="" id="phone" placeholder="+7 ___ ___ __ __" class="form__input">
 										</label>
 									</div>
 									<div class="form__block">
 										<label for="comment" class="form__label form__label_w-100">
-											<span class="form__label-text">Комментарий </span>
+											<span class="form__label-text">Comment</span>
 											<textarea name="MESSAGE" id="comment" class="form__textarea"></textarea>
 										</label>
 									</div>
@@ -138,15 +142,15 @@
 										<label for="policy" class="form__label form__label_w-100 form__label_checkbox">
 											<input type="checkbox" name="policy" required id="policy" class="form__checkbox">
 											<span class="form__label-checkbox">
-												 Я даю свое согласие на обработку моих персональных данных,
+												I give my consent to the processing of my personal data,
 												<br>
-												 в соответствии с 
-												<a href='/policy/' target='_blank'>политикой конфиденциальности</a>
+												in accordance with the
+												<a href='/policy/' target='_blank'>privacy policy</a>
 											</span>
 										</label>
 									</div>
 									<div class="form__block form__block_m-0">
-										<input class="form__button btn btn_blue" type="submit" name="submit" value="Отправить">
+										<input class="form__button btn btn_blue" type="submit" name="submit" value="Send">
 									</div>
 								</div>
 							</div>
@@ -161,23 +165,23 @@
 						<div class="footer__left">
 							<a href="#" class="footer__logo logo">
 								<img src="images/dest/second-logo.svg" alt="">
-								<div class="logo__copy">© 2022 ООО «Интеко»</div>
+								<div class="logo__copy">© 2022 ООО «Inteco»</div>
 							</a>
 							<div class="footer__menu menu-second">
-								<a href="#" class="menu-second__item">О компании</a>
-								<a href="#" class="menu-second__item">Продукция</a>
-								<a href="#" class="menu-second__item">Наши услуги</a>
-								<a href="#" class="menu-second__item">Контакты</a>
+								<a href="#" class="menu-second__item">About Us </a>
+								<a href="#" class="menu-second__item">Products</a>
+								<a href="#" class="menu-second__item">Our services</a>
+								<a href="#" class="menu-second__item">Contacts</a>
 							</div>
 						</div>
 						<div class="footer__right">
 							<div class="footer__contacts">
-								<a href="#" class="footer__contacts-item">Самара, ул. Земеца 4, корп. 94Б</a>
+								<a href="#" class="footer__contacts-item">Samara, st. Zemetsa 4, office 1</a>
 								<a href="#" class="footer__contacts-item">+7 (846) 212-97-57</a>
 							</div>
 							<div class="footer__feedback feedback">
-								<div class="feedback__callback">Заказать звонок</div>
-								<a href="#" class="feedback__email">info@<span>cps</span>63.ru</a>
+								<div class="feedback__callback">Request a call</div>
+								<a href="#" class="feedback__email">sales@<span>espipesystem</span>.de</a>
 							</div>
 						</div>
 					</div>
