--- a/es-systems/about.html
+++ b/es-systems/about.html
@@ -17,16 +17,16 @@
 								<img src="images/dest/logo.svg" alt="logo">
 							</a>
 							<nav class="header__menu menu">
-								<a href="#" class="menu__item">О компании</a>
-								<a href="#" class="menu__item">Продукция</a>
-								<a href="#" class="menu__item">Наши услуги</a>
-								<a href="#" class="menu__item">Контакты</a>
+								<a href="#" class="menu__item">About Us</a>
+								<a href="#" class="menu__item">Products</a>
+								<a href="#" class="menu__item">Our services</a>
+								<a href="#" class="menu__item">Contacts</a>
 							</nav>
 						</div>
 						<div class="header__right">
 							<div class="header__feedback feedback">
-								<div class="feedback__callback">Заказать звонок</div>
-								<a href="#" class="feedback__email">info@cps63.ru</a>
+								<div class="feedback__callback">Request a call</div>
+								<a href="#" class="feedback__email">sales@espipesystem.de</a>
 							</div>
 						</div>
 					</div>
@@ -37,8 +37,8 @@
 				<div class="wrapper">
 					<div class="banner__inner">
 						<div class="banner__content">
-							<div class="banner__title">Многолетний опыт успешного поиска и внедрения правильных решений</div>
-							<div class="banner__description">ES System GMBH - современное предприятие, оснащенное новейшим высокоэффективным оборудованием и командой высококлассных специалистов. Компания образована в 2012 году с целью поиска решения задач в области антикоррозионной защиты труб</div>
+							<div class="banner__title">Many years of experience in successfully searching and applying the right solutions</div>
+							<div class="banner__description">ES System GMBH is a modern enterprise equipped with the latest high-performance equipment and a team of highly qualified specialists. The company was founded in 2012 with the aim of finding solutions to problems in the field of anti-corrosion protection of welds on pipelines</div>
 							<div class="banner__bottom">
 								<div class="banner__advantages">
 									<div class="banner__advantages-item">
@@ -47,7 +47,7 @@
 										</div>
 										<div class="banner__advantages-item-content">
 											<div class="banner__advantages-item-title">ISO 9001:2015</div>
-											<div class="banner__advantages-item-description">На предприятии внедрены системы менеджмента качества</div>
+											<div class="banner__advantages-item-description">The company has implemented quality management systems</div>
 										</div>
 									</div>
 								</div>
@@ -60,39 +60,39 @@
 			<div class="wrapper">
 				
 				<section class="company">
-						<div class="title">О компании</div>
-						<p class="company__description">Компания «ES System GMBH» занимается производством и реализацией устройства защиты внутренней части сварного стыка трубопроводов (втулок) оригинальной конструкции, а также производством и реализацией модифицированных НКТ (ES System)</p>
-						<div class="company__list">
-							<div class="company__item">
-								<img class="company__item-image" src="images/dest/protection.svg" alt="">
-								<div class="company__item-title">Наша компания</div>
-								<div class="company__item-text">Современное предприятие с собственными производственными площадями и складскими комплексами, оснащенное новейшим высококачественным оборудованием и командой высококлассных специалистов</div>
-							</div>
-							<div class="company__item">
-								<img class="company__item-image" src="images/dest/protection.svg" alt="">
-								<div class="company__item-title">Специализация</div>
-								<div class="company__item-text">Производство устройств защиты внутренней части сварного стыка трубопроводов (втулки), а также производство модифицированных НКТ (ES Sytem)</div>
-							</div>
-							<div class="company__item">
-								<img class="company__item-image" src="images/dest/protection.svg" alt="">
-								<div class="company__item-title">Производство</div>
-								<div class="company__item-text">Мы располагаем мощным производственным комплексом, который включает в себя: участок входного / выходного контроля, линию покраски, участок механической обработки и сварки, участок монтажных работ, система перемещения труб между участками по очистке, напылению, наплавки и гидрораздачи, склад готовой продукции</div>
-							</div>
-							<div class="company__item">
-								<img class="company__item-image" src="images/dest/protection.svg" alt="">
-								<div class="company__item-title">Команда</div>
-								<div class="company__item-text">Основа нашей компании — высококлассный, квалифицированный коллектив профессионалов, обладающих большим опытом и высокой компетенции в области антикоррозионной защиты различных элементов трубопроводов и НКТ</div>
-							</div>
+					<div class="title">About Us</div>
+					<p class="company__description">«ES System GMBH» is engaged in the production and sale of devices for protecting the internal part of the weld joint of pipelines (sleeves) with the original design, as well as the production and sale of modified tubing (ES System)</p>
+					<div class="company__list">
+						<div class="company__item">
+							<img class="company__item-image" src="images/dest/protection.svg" alt="">
+							<div class="company__item-title">Our company</div>
+							<div class="company__item-text">A modern company with its own production facilities and warehouse complexes, equipped with the latest high-quality equipment and a team of highly qualified specialists</div>
 						</div>
-				</section>
+						<div class="company__item">
+							<img class="company__item-image" src="images/dest/protection.svg" alt="">
+							<div class="company__item-title">Specialization</div>
+							<div class="company__item-text">Production of devices for protecting the inner part of the welded joint of pipelines (sleeves), as well as the production of modified tubing (ES Sytem)</div>
+						</div>
+						<div class="company__item">
+							<img class="company__item-image" src="images/dest/protection.svg" alt="">
+							<div class="company__item-title">Production</div>
+							<div class="company__item-text">We have a powerful production complex, which includes: input/output control areas, painting line, machining and welding area, installation work area, pipe transfer system between cleaning, spraying, cladding and hydraulic distribution areas, finished product warehouse</div>
+						</div>
+						<div class="company__item">
+							<img class="company__item-image" src="images/dest/protection.svg" alt="">
+							<div class="company__item-title">Our team</div>
+							<div class="company__item-text">The basis of our company is a high—class, qualified team of professionals with extensive experience and high competence in the field of corrosion protection of various elements of pipelines and tubing</div>
+						</div>
+					</div>
+			</section>
 
 				<section class="why">
 					<div class="why__block">
-						<div class="why__title title">Почему мы</div>
+						<div class="why__title title">Why do you choose us</div>
 						<div class="why__text">
-							<p>Для эффективной работы специалисты компании постоянно находятся в поиске современных решений, подходя к вопросу защиты от коррозии с учетом самых последних тенденций.</p>
-							<p>Все работы производятся на современном высокопроизводительном оборудовании: сварка на полуавтомате в среде защитных газов, подготовка поверхности в обитаемой дробеструйной камере, покраска деталей на специализированной линии.</p>
-							<p>Собственные инновационные разработки в области антикоррозионной защиты труб и их деталей</p>
+							<p>For effective work, the company's specialists are constantly in search of modern solutions, approaching the issue of corrosion protection taking in light of the latest trends.</p>
+							<p>All work is carried out on modern high-performance equipment: semi-automatic welding in a shielding gas environment, surface preparation in a manned shot blasting chamber, painting parts on a specialized line.</p>
+							<p>Own innovative developments in the field of anticorrosive protection of pipes and their parts</p>
 						</div>
 					</div>
 					<div class="why__block">
@@ -104,33 +104,33 @@
                         <div class="why__history-year">2012</div>
                         <div class="why__history-content">
                             <div class="why__history-text">
-                                <p>Компания образована в 2012 году с целью поиска новых решений в области антикоррозионной защиты сварных швов на трубопроводах.</p>
-                                <p>Современное предприятие, оснащенное современным высокопроизводительным оборудованием и командой высококлассных специалистов.</p>
+                                <p>The company was founded in 2012 with the aim of searching new solutions in the field of anti-corrosion protection of pipelines and tubin</p>
+                                <p>A modern plant equipped with modern high-performance equipment and a team of highly qualified specialists.</p>
                             </div>
                             <div class="why__history-advantages">
                                 <div class="why__history-advantages-item">
                                     <div class="why__history-advantages-item-icon">
                                         <img src="images/dest/map.svg" alt="">
                                     </div>
-                                    <div class="why__history-advantages-item-text">Удобное географическое расположение, позволяющее поставлять продукцию в любую точку РФ и страны СНГ</div>
+                                    <div class="why__history-advantages-item-text">Convenient geographic location that allows to supply products anywhere in the world</div>
                                 </div>
                                 <div class="why__history-advantages-item">
                                     <div class="why__history-advantages-item-icon">
                                         <img src="images/dest/service.svg" alt="">
                                     </div>
-                                    <div class="why__history-advantages-item-text">Оказываем любые консультационные услуги по подбору покрытий, конструкций изделий и защите сварного шва на трубопроводах</div>
+                                    <div class="why__history-advantages-item-text">We provide any consulting services for the selection of coatings, product designs and protection of the weld on pipelines and increase of service life of tubing</div>
                                 </div>
                                 <div class="why__history-advantages-item">
                                     <div class="why__history-advantages-item-icon">
                                         <img src="images/dest/painting.svg" alt="">
                                     </div>
-                                    <div class="why__history-advantages-item-text">Работаем со всеми типами порошковых покрытий, которые востребованы в нефтегазовой промышленности</div>
+                                    <div class="why__history-advantages-item-text">We work with all types of powder coatings that are demanded in the oil and gas industry</div>
                                 </div>
                                 <div class="why__history-advantages-item">
                                     <div class="why__history-advantages-item-icon">
                                         <img src="images/dest/profile.svg" alt="">
                                     </div>
-                                    <div class="why__history-advantages-item-text">Индивидуальный подход к каждому клиенту и гибкая ценовая политика</div>
+                                    <div class="why__history-advantages-item-text">Individual approach to each client and flexible pricing policy</div>
                                 </div>
                             </div>
                         </div>
@@ -144,35 +144,35 @@
 			<div class="wrapper">
 				<section class="contacts">
 					<div class="contacts__block">
-						<div class="contacts__title title">Контакты</div>
+						<div class="contacts__title title">Contact</div>
 						<a href="#" class="contacts__phone">+7 (846) 212-97-57</a>
-						<a href="#" class="contacts__email">info@cps63.ru</a>
-						<a href="#" class="contacts__requisites">реквизиты</a>
-						<div class="contacts__adress">443052 Россия, Самара, ул. Земеца 4, корп. 94Б</div>
+						<a href="#" class="contacts__email">sales@espipesystem.de</a>
+						<!-- <a href="#" class="contacts__requisites">реквизиты</a> -->
+						<div class="contacts__adress">443052 Russia, Samara, st. Zemetsa 4, office 1</div>
 						<div class="contacts__work-time">
-							Работаем с 8:00 до 17:00<br>
-							(Выходные: суббота, воскресенье)
+							Working time from 8:00 till 17:00<br>
+							(Weekend: Saturday, Sunday)
 						</div>
 					</div>
 					<div class="contacts__block">
 						<form class="contacts__form form" action="/" method="POST">
 							<div class="form__inner">
-								<div class="form__title">Задать вопрос</div>
-								<div class="form__description">Подробно расскажем о наших услугах, видах работ и типовых проектах, рассчитаем стоимость и подготовим индивидуальное предложение!</div>
+								<div class="form__title">Ask a question</div>
+								<div class="form__description">We will tell you in detail about our services, types of work and standard projects, calculate the cost and prepare an individual offer!</div>
 								<div class="form__fields">
 									<div class="form__block">
 										<label for="name" class="form__label">
-											<span class="form__label-text">Как к вам обращаться? </span>
+											<span class="form__label-text">How can we call you?</span>
 											<input type="text" name="user_name" value="" id="name" class="form__input">
 										</label>
 										<label for="phone" class="form__label">
-											<span class="form__label-text">Телефон *</span>
+											<span class="form__label-text">Phone *</span>
 											<input type="text" name="user_phone" data-mask="phone" value="" id="phone" placeholder="+7 ___ ___ __ __" class="form__input">
 										</label>
 									</div>
 									<div class="form__block">
 										<label for="comment" class="form__label form__label_w-100">
-											<span class="form__label-text">Комментарий </span>
+											<span class="form__label-text">Comment</span>
 											<textarea name="MESSAGE" id="comment" class="form__textarea"></textarea>
 										</label>
 									</div>
@@ -181,15 +181,15 @@
 										<label for="policy" class="form__label form__label_w-100 form__label_checkbox">
 											<input type="checkbox" name="policy" required id="policy" class="form__checkbox">
 											<span class="form__label-checkbox">
-												 Я даю свое согласие на обработку моих персональных данных,
+												I give my consent to the processing of my personal data,
 												<br>
-												 в соответствии с 
-												<a href='/policy/' target='_blank'>политикой конфиденциальности</a>
+												in accordance with the
+												<a href='/policy/' target='_blank'>privacy policy</a>
 											</span>
 										</label>
 									</div>
 									<div class="form__block form__block_m-0">
-										<input class="form__button btn btn_blue" type="submit" name="submit" value="Отправить">
+										<input class="form__button btn btn_blue" type="submit" name="submit" value="Send">
 									</div>
 								</div>
 							</div>
@@ -204,23 +204,23 @@
 						<div class="footer__left">
 							<a href="#" class="footer__logo logo">
 								<img src="images/dest/second-logo.svg" alt="">
-								<div class="logo__copy">© 2022 ООО «Интеко»</div>
+								<div class="logo__copy">© 2022 ООО «Inteco»</div>
 							</a>
 							<div class="footer__menu menu-second">
-								<a href="#" class="menu-second__item">О компании</a>
-								<a href="#" class="menu-second__item">Продукция</a>
-								<a href="#" class="menu-second__item">Наши услуги</a>
-								<a href="#" class="menu-second__item">Контакты</a>
+								<a href="#" class="menu-second__item">About Us </a>
+								<a href="#" class="menu-second__item">Products</a>
+								<a href="#" class="menu-second__item">Our services</a>
+								<a href="#" class="menu-second__item">Contacts</a>
 							</div>
 						</div>
 						<div class="footer__right">
 							<div class="footer__contacts">
-								<a href="#" class="footer__contacts-item">Самара, ул. Земеца 4, корп. 94Б</a>
+								<a href="#" class="footer__contacts-item">Samara, st. Zemetsa 4, office 1</a>
 								<a href="#" class="footer__contacts-item">+7 (846) 212-97-57</a>
 							</div>
 							<div class="footer__feedback feedback">
-								<div class="feedback__callback">Заказать звонок</div>
-								<a href="#" class="feedback__email">info@<span>cps</span>63.ru</a>
+								<div class="feedback__callback">Request a call</div>
+								<a href="#" class="feedback__email">sales@<span>espipesystem</span>.de</a>
 							</div>
 						</div>
 					</div>
